feat: annotation processor + Jakarta EE adapter + 100K SBB stress test
jainslee-apt
- MicroJainsleeAnnotationProcessor scans @SbbAnnotation /
  @DeployableUnit / @EventType at compile time.
- Uses AnnotationMirror API (NOT reflection on Class[]) to read
  Class[] members without triggering MirroredTypesException.
- Returns false from process() so other processors can also consume
  the annotations; accumulates state in instance fields across
  rounds and only writes the index on processingOver().
- Emits META-INF/microjainslee/sbb-index.properties with
  sbb.<n>.{class,name,vendor,version} keys plus eventType.<n>.*
  and du.<n>.* entries.
- SPI registered via META-INF/services/
  javax.annotation.processing.Processor.
- Verified end-to-end with a fixture compilation: processor emitted
  sbb.0.class=com.example.MySbb, sbb.0.name=MySbb, etc.

adapter-jakartaee
- MicroSleeContainerStartup is @Singleton @Startup @LocalBean EJB.
- @PostConstruct builds MicroSleeContainer from system properties
  (microjainslee.config.*), starts it, and binds MicroSleeContainer,
  EventRouter, TimerPort, ActivityContextNamingFacility into JNDI
  at java:global/microjainslee/* via InitialContext.bind/rebind.
- @PreDestroy stops the container and unbinds all four entries.
- JndiNames constants for the 4 JNDI names.
- Uses jakarta.ejb.Singleton / jakarta.annotation.PostConstruct /
  jakarta.annotation.PreDestroy (NOT javax.*) for Jakarta EE 9+
  compatibility; javax.naming for JNDI.

SbbEntityPoolStressTest
- 246 LOC covering create + pending + cancel lifecycle at three
  scale points: 10K / 50K / 100K SBBs.
- Each task asserts (lastSeq+1 == seq) to verify single-threaded
  per-SBB ordering on the parked virtual thread.
- Final counter must equal TASKS_PER_SBB for every SBB.
- Post-shutdown acquire() must throw IllegalStateException.
- Runs on Java 21+ where Executors.newVirtualThreadPerTaskExecutor
  is available; falls back to cached platform threads on older JVMs.
- Measured on Java 25.0.